    parsing GNU tool chain flags into a dictionary.
    
  - Add an env.MergeFlags() method to apply an arbitrary dictionary
    of flags to a construction environment's variables.

  From Gary Oberbrunner:

  - Fix parsing tripartite Intel C compiler version numbers on Linux.

  - Extend the ParseConfig() function to recognize -arch and
    -isysroot options.

  From Karol Pietrzak:

  - Avoid recursive calls to main() in the program snippet used by the
    SConf subsystem to test linking against libraries.  This changes the
    default behavior of CheckLib() and CheckLibWithHeader() to print
    "Checking for C library foo..." instead of "Checking for main()
    in C library foo...".

  From John Pye:

  - Throw an exception if a command called by ParseConfig() or
    ParseFlags() returns an error.

  From Stefan Seefeld:

  - Initial infrastructure for running SCons tests under QMTest.

  From Atul Varma:

  - Fix detection of Visual C++ Express Edition.



RELEASE 0.96.92 - Mon, 10 Apr 2006 21:08:22 -0400

  NOTE:  This was a pre-release of 0.97 for testing purposes.

  From Anonymous:

  - Fix the intelc.py Tool module to not throw an exception if the
    only installed version is something other than ia32.

  - Set $CCVERSION when using gcc.

  From Matthias:

  - Support generating project and solution files for Microsoft
    Visual Studio version 8.

  - Support generating more than one project file for a Microsoft
    Visual Studio solution file.

  - Add support for a support "runfile" parameter to Microsoft
    Visual Studio project file creation.

  - Put the project GUID, not the solution GUID, in the right spot
    in the solution file.

  From Erling Andersen:

  - Fix interpretation of Node.FS objects wrapped in Proxy instances,
    allowing expansion of things like ${File(TARGET)} in command lines.

  From Stanislav Baranov:

  - Add a separate MSVSSolution() Builder, with support for the